--- a/src/customer-success-career-coaching/index.njk
+++ b/src/customer-success-career-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/customer-success-career-coaching/"
 ---
 {% set page = rolePages.customerSuccess %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
