--- a/src/cybersecurity-career-coaching/index.njk
+++ b/src/cybersecurity-career-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/cybersecurity-career-coaching/"
 ---
 {% set page = rolePages.cybersecurity %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
