--- a/src/data-career-coaching/index.njk
+++ b/src/data-career-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/data-career-coaching/"
 ---
 {% set page = rolePages.data %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
