--- a/src/devops-career-coaching/index.njk
+++ b/src/devops-career-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/devops-career-coaching/"
 ---
 {% set page = rolePages.devops %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
