--- a/src/engineering-manager-coaching/index.njk
+++ b/src/engineering-manager-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/engineering-manager-coaching/"
 ---
 {% set page = rolePages.engineeringManager %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
