--- a/src/product-manager-career-coaching/index.njk
+++ b/src/product-manager-career-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/product-manager-career-coaching/"
 ---
 {% set page = rolePages.productManager %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
