--- a/src/project-program-management-coaching/index.njk
+++ b/src/project-program-management-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/project-program-management-coaching/"
 ---
 {% set page = rolePages.projectProgramManagement %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
