--- a/src/qa-career-coaching/index.njk
+++ b/src/qa-career-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/qa-career-coaching/"
 ---
 {% set page = rolePages.qa %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
