--- a/src/software-engineer-career-coaching/index.njk
+++ b/src/software-engineer-career-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/software-engineer-career-coaching/"
 ---
 {% set page = rolePages.softwareEngineer %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
