--- a/src/solutions-architect-career-coaching/index.njk
+++ b/src/solutions-architect-career-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/solutions-architect-career-coaching/"
 ---
 {% set page = rolePages.solutionsArchitect %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
