--- a/src/technical-program-manager-coaching/index.njk
+++ b/src/technical-program-manager-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/technical-program-manager-coaching/"
 ---
 {% set page = rolePages.technicalProgramManager %}
-{% include "marketing-page.njk" %}
+{% include "role-page.njk" %}
